--- a/src/app/forms/manage-form/manage-form.component.css
+++ b/src/app/forms/manage-form/manage-form.component.css
@@ -192,3 +192,6 @@ cursor: default;
 h4.gridViewDesignTextAlignmnent{
   padding-bottom: 3px;
 }
+.xamp-margin-left-icon{
+  margin: 0px 0px 5px 8px!important;
+}
